--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,9 +1,15 @@
 * {
     margin: 0;
     padding: 0;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box !important;
+    -moz-box-sizing: border-box !important;
+    box-sizing: border-box !important;
+}
+
+.wp-pros-cons div {
+    -webkit-box-sizing: border-box !important;
+    -moz-box-sizing: border-box !important;
+    box-sizing: border-box !important;
 }
 
 .wp-pros-cons {
@@ -12,25 +18,37 @@
     border: dashed 2px #28b914;
     width: 100%;
     max-width: 963px;
-    padding: 70px 82px;
+    /*padding: 70px 82px;*/
+    padding: 30px 0 30px 0;
 }
 
 .wp-pros-cons .wp-pros-cons-title {
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
     color: #1a1a1a;
     font-size: 28px;
     font-weight: normal;
 }
 
 .wp-pros-cons .wp-pros-cons-sections {
-    margin: 0 auto;
+    display: block;
+    margin: 40px 0 0 0;
+    padding-top: 58px;
+    min-width: 100%;
+}
+
+.wp-pros-cons .wp-pros-cons-sections:before,
+.wp-pros-cons .wp-pros-cons-sections:after {
+    content: "";
+    display: block;
+    float: none;
+    clear: both;
+    width: 100%;
 }
 
 .wp-pros-cons-img-container {
     display: inline-block;
-    width: 116px;
-    height: 116px;
+    width: 100px;
+    height: 100px;
     -moz-border-radius: 50%;
     -webkit-border-radius: 50%;
     border-radius: 50%;
@@ -40,19 +58,25 @@
     position: relative;
 }
 
+.wp-pros-cons-col {
+    width: 50%;
+    display: block;
+    padding: 0 15px;
+    float: left;
+}
+
 .wp-pros-cons .section {
+    width: 100%;
     background: #fff;
-    width: calc(50% - 38px);
-    margin: 0 18px 0px;
     position: relative;
-    padding-top: 90px;
-    display: inline-block;
     text-align: left;
-    padding: 0 27px;
+    padding: 0 15px;
     padding-bottom: 45px;
-    -webkit-box-shadow: 0 0 10px #000;
+    -moz-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    margin-top: 135px;
+    display: block;
+    float: left;
 }
 
 .wp-pros-cons-img-wrap {
@@ -61,6 +85,7 @@
 }
 
 .wp-pros-cons-img-container img {
+    width: 46px !important;
     vertical-align: middle;
     display: inline-block;
     margin: auto;
@@ -84,12 +109,12 @@
 
 .wp-pros-cons .section-title {
     font-size: 28px;
-    font-family: 'Open Sans', sans-serif;
     color: #252525;
     font-weight: 700;
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 25px;
     margin-top: 10px;
+    padding: 0;
 }
 
 
@@ -99,13 +124,17 @@
     list-style: none;
 }
 
-
-
 .wp-pros-cons ul li {
-    font-family: 'Open Sans', sans-serif;
     font-size: 18px;
     color: #3b3b3b;
-    margin: 16px 0;
+    margin: 12px 0;
+    white-space: normal;
+    word-break: break-word;
+}
+
+.wp-pros-cons ul li:before,
+.wp-pros-cons ul li:after {
+    display: none !important;
 }
 
 .wp-pros-cons .pros-section ul li {
@@ -115,118 +144,62 @@
 }
 
 .wp-pros-cons .cons-section ul li {
-    padding-left: 33px;
+    padding-left: 30px;
     background: url('../img/cros.png') no-repeat top 8px left;
     background-size: 18px 17px;
 }
 
 .wp-pros-cons .wp-pros-cons-btn-wrap {
     text-align: center;
-    margin-top: 60px;
+    margin-top: 30px;
 }
 
 .wp-pros-cons a {
     text-decoration: none;
-    font-size: 30px;
-    font-family: 'Open Sans', sans-serif;
+    font-size: 24px;
+    line-height: 1.2;
     font-weight: 300;
     color: #fff;
     background: #212121;
-    padding: 12px 146px;
+    padding: 12px 25px;
     border-radius: 60px;
     display: inline-block;
 }
 
 @media (max-width:1024px) {
     .wp-pros-cons {
-        padding: 40px 20px;
+        padding: 20px 20px;
     }
 }
 
 @media (max-width:767px) {
 
     .wp-pros-cons {
-        width: auto;
-        padding: 40px 42px;
+        width: 100%;
+        padding: 20px 15px;
     }
 
-    .wp-pros-cons .section {
+    .wp-pros-cons-col {
         width: 100%;
-        margin: 0 0px 0px;
-        position: relative;
-        padding-top: 90px;
-        display: inline-block;
-        text-align: left;
-        padding: 0 27px;
-        padding-bottom: 93px;
-        -webkit-box-shadow: 0 0 10px #000;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        margin-top: 100px;
+        padding: 0;
+    }
+
+    .wp-pros-cons-col:first-child {
+        margin-bottom: 90px;
     }
 
     .wp-pros-cons .section-title {
         margin-bottom: 20px;
     }
-    
+
     .wp-pros-cons .wp-pros-cons-btn-wrap {
         text-align: center;
         margin-top: 25px;
     }
 
     .wp-pros-cons a {
-        text-decoration: none;
-        font-size: 30px;
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 300;
-        color: #fff;
-        background: #212121;
-        padding: 12px 46px;
-        border-radius: 60px;
-        display: inline-block;
+        font-size: 24px;
+        padding: 15px 35px;
+        line-height: 1;
     }
-
-}
-
-@media (max-width:480px) {
-
-    .wp-pros-cons {
-        width: auto;
-        padding: 40px 20px;
-    }
-
-    .wp-pros-cons .section {
-        width: 100%;
-        margin: 0 0px 0px;
-        position: relative;
-        padding-top: 90px;
-        display: inline-block;
-        text-align: left;
-        padding: 0 27px;
-        padding-bottom: 93px;
-        -webkit-box-shadow: 0 0 10px #000;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        margin-top: 100px;
-    }
-    
-    .wp-pros-cons .section-title {
-        margin-bottom: 20px;
-    }
-    
-    .wp-pros-cons .wp-pros-cons-btn-wrap {
-        text-align: center;
-        margin-top: 25px;
-    }
-    
-    .wp-pros-cons a {
-        text-decoration: none;
-        font-size: 30px;
-        font-family: 'Open Sans', sans-serif;
-        font-weight: 300;
-        color: #fff;
-        background: #212121;
-        padding: 12px 46px;
-        border-radius: 60px;
-        display: inline-block;
-    }
-
 }
